ndk/networking/networking_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  ingressClassName: kommander-traefik
  tls:
    - hosts:
        - wordpress.gslb.thencpnutanix.com
      secretName: wordpress-tls-cert # cert-manager will create this secret
  rules:
    - host: wordpress.gslb.thencpnutanix.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
